AC_INIT(zfs-quota,0.0.1)
AC_LANG(C)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([config])
AC_CANONICAL_SYSTEM
AM_MAINTAINER_MODE

AC_CONFIG_HEADERS([zfs-quota-config.h])

AC_PROG_CC

ZFS_AC_KERNEL
ZFSQUOTA_AC_ZFS
ZFS_AC_SPL

SPL_INCLUDE=/usr/local/src/spl-0.6.5/include
ZFS_INCLUDE=/usr/local/src/zfs-0.6.5/include
ZFS_KERNEL_INCLUDE=/usr/local/src/zfs-0.6.5/3.10.0-327.10.1.el7.x86_64/

AC_SUBST(SPL_INCLUDE)
AC_SUBST(ZFS_INCLUDE)
AC_SUBST(ZFS_KERNEL_INCLUDE)

ZFS_AC_OBJECT_QUOTA

AC_CONFIG_FILES([
	src/Makefile
])

AC_OUTPUT
