AC_INIT(zfs-quota,0.0.1)
AC_LANG(C)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([config])
AC_CANONICAL_SYSTEM

AC_CONFIG_HEADERS([zfs-quota-config.h])

AC_PROG_CC

ZFS_AC_KERNEL
ZFSQUOTA_AC_ZFS
ZFS_AC_SPL
ZFS_AC_OBJECT_QUOTA
AC_HAVE_QUOTA_KQID_QC_DQBLK
AC_HAVE_QUOTA_KQID_FDQ
AC_PATH_LOOKUP

AC_CONFIG_FILES([
	src/Makefile
])

AC_OUTPUT
